# forti-api

./: .env.example  .gitignore  README.md  conanfile.py  main.cpp  meson.build
.github/workflows/: build.yml  release.yml
include/: FortiAPI.hpp  forti_api.hpp  schemas.hpp
include/forti_api/: api.h  api.hpp  dns_filter.h  dns_filter.hpp  firewall.hpp  system.hpp  threat_feed.h  threat_feed.hpp
include/forti_api/types/: policy.h  policy.hpp
include/forti_api/util/: define_type.hpp
tests/: main.cpp  test_dns_filter.cpp  test_system.cpp  test_threat_feed.cpp
