project('forti_api', 'cpp',
        version : '0.1.0',
        default_options : ['warning_level=3', 'cpp_std=c++26'])

json_dep = dependency('nlohmann_json', required: true)
json_validator_dep = dependency('json-schema-validator', required: true)
libcurl_dep = dependency('libcurl', required: true)
